# DepthFrame-Processing-Service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_problem_understanding.md  02_architecture_overview.md
notebooks/: 01_exploration.ipynb
scripts/: entrypoint.sh
src/depthframe_processing_service/: config.py  ingest.py
src/depthframe_processing_service/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
src/depthframe_processing_service/colormaps/: registry.py
src/depthframe_processing_service/db/: repository.py
src/depthframe_processing_service/ingestion/: pipeline.py
tests/: conftest.py
tests/integration/: test_api.py  test_ingestion.py
tests/unit/: test_colormaps.py  test_pipeline.py  test_repository.py  test_schemas.py
